@@ -1,5 +1,44 @@
-#!/bin/bash
-DIR=`pwd`
+#!/bin/sh
+
+#check JAVA_HOME & java
+noJavaHome=false
+if [ -z "$JAVA_HOME" ] ; then
+    noJavaHome=true
+fi
+if [ ! -e "$JAVA_HOME/bin/java" ] ; then
+    noJavaHome=true
+fi
+if $noJavaHome ; then
+    echo
+    echo "Error: JAVA_HOME environment variable is not set."
+    echo
+    exit 1
+fi
+#==============================================================================
+
+#set JAVA_OPTS
+JAVA_OPTS="-server -Xms1024m -Xmx1024m -Xmn256m -Xss256k"
+#performance Options
+JAVA_OPTS="$JAVA_OPTS -XX:+AggressiveOpts"
+JAVA_OPTS="$JAVA_OPTS -XX:+UseBiasedLocking"
+JAVA_OPTS="$JAVA_OPTS -XX:+UseFastAccessorMethods"
+JAVA_OPTS="$JAVA_OPTS -XX:+DisableExplicitGC"
+JAVA_OPTS="$JAVA_OPTS -XX:+UseParNewGC"
+JAVA_OPTS="$JAVA_OPTS -XX:+UseConcMarkSweepGC"
+JAVA_OPTS="$JAVA_OPTS -XX:+CMSParallelRemarkEnabled"
+JAVA_OPTS="$JAVA_OPTS -XX:+UseCMSCompactAtFullCollection"
+JAVA_OPTS="$JAVA_OPTS -XX:+UseCMSInitiatingOccupancyOnly"
+JAVA_OPTS="$JAVA_OPTS -XX:CMSInitiatingOccupancyFraction=75"
+#GC Log Options
+#JAVA_OPTS="$JAVA_OPTS -XX:+PrintGCApplicationStoppedTime"
+#JAVA_OPTS="$JAVA_OPTS -XX:+PrintGCTimeStamps"
+#JAVA_OPTS="$JAVA_OPTS -XX:+PrintGCDetails"
+#debug Options
+#JAVA_OPTS="$JAVA_OPTS -Xdebug -Xrunjdwp:transport=dt_socket,address=8065,server=y,suspend=n"
+#==============================================================================
+
+#set HOME
+CURR_DIR=`pwd`
 cd `dirname $0`
 cd ../lib
 LIB_DIR=`pwd`
@@ -14,7 +53,7 @@ fi
 
 LIB_JARS=`ls ${LIB_DIR} | grep .jar | awk '{print "'${LIB_DIR}'/"$0}' | tr "\n" ":"`
 cd ..
-nohup java -classpath ${LIB_JARS} ${SERVER_NAME} nohup.server.out 2>&1 &
+nohup java -classpath ${LIB_JARS} ${JAVA_OPTS} ${SERVER_NAME} nohup.server.out 2>&1 &
 
 echo "start "${SERVER_NAME}" success!"
-cd ${DIR}
+cd ${CURR_DIR}
